# opentitan

sw/device/examples/: meson.build
sw/device/examples/crypto/: README.md  crypto.c  crypto.h  crypto.i  key.h  meson.build  titan_client.py
